--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             // Check if the base URL matches 'seashell.charles.systems'
             if (window.location.hostname === 'seashell.charles.systems') {
                 // Redirect to the /docs directory
-                window.location.href = '/docs';
+                window.location.href = '/ctpe/docs';
             }
         };
     </script>
